test/typechecker.d/invalid/fns4.surc.bad
f(x: Integer): Integer = x + 1

g(x: Integer): Char = fndo
	var r <- 'a' >> f
	return r
